--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ main {
   grid-gap: 20px;
   margin-top: 44px;
   grid-auto-rows: 500px;
+  justify-items: center;
 }
 
 h2 {
@@ -30,6 +31,7 @@ img {
 
 .recipe {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.5);
+  width: 200px;
 }
 
 .a {
